force-app/main/default/objects/Objects__c/Objects__c.object-meta.xml
<CustomObject>
    <label>Objects</label>
    <nameField>
        <label>Objects</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>