force-app/main/default/objects/Objects__c/fields/Master_Object__c.field-meta.xml
<CustomField>
    <fullName>Master_Object__c</fullName>
    <label>Master Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>