force-app/main/default/objects/Objects__c/fields/NO__c.field-meta.xml
<CustomField>
    <fullName>NO__c</fullName>
    <label>NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>