force-app/main/default/objects/Objects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NO__c</columns>
    <columns>API_Name__c</columns>
    <columns>Object_Label__c</columns>
    <columns>Master_Object__c</columns>
    <columns>Object_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>